# ai-network-observer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ubuntu-ebpf  LICENSE  MASTER_AI_UPGRADE.sh  ML_README.md  Makefile  PROJECT_COMPLETE.md  README.md  README_GITHUB.md  SECURITY.md  TESTING_GUIDE.md  alert-webhook.sh  correlate.py  docker-compose.yml  docker-compose.yml.backup  docker-compose.yml.save  docker-entrypoint.sh  export-splunk.sh  health.sh  install.sh  ml-baseline.py  monitor-all.sh  monitor-grafana.sh  monitor-neo4j.sh  monitor-prometheus.sh  pyproject.toml  pytest.ini  quick-test.sh  requirements-dev.txt  requirements.txt  setup-monitoring-cli.sh  setup.py  test-ml-detection.sh  train-ml-model.sh  view-analysis.sh  (+1 more)
.github/workflows/: ci.yml
backup-20260222-100706/: docker-compose.yml
config/: allowlist_domains.txt  config.example.yaml  whitelist.json
examples/: demo.py
grafana/dashboards/: dashboards-config.yml  network-security-live.json
grafana/datasources/: datasources.yml
grafana/provisioning/dashboards/: dashboards.yml  network-security.json
grafana/provisioning/datasources/: datasources.yml
neo4j/: cypher-queries.md  neo4j_connector.py
neo4j/scripts/: analyze-threats.cypher  import-from-json.sh  init-schema.cypher
prometheus/: alertmanager.yml  metrics.py  network_security.yml  prometheus.yml
prometheus/alerts/: network_alerts.yml
src/: main.py.backup
src/automation/: remediation_engine.py
src/core/: capture_engine.py
src/extractors/: dns_analyzer.py  http_metadata.py  tls_fingerprint.py
src/graph/: network_graph.py
src/integrations/: soar_connector.py
src/intelligence/: llm_connector.py  ollama_connector.py  ollama_connector.py.backup
src/ml/: anomaly_detector.py  feature_extractor.py  training_pipeline.py
src/privacy/: data_masker.py
tests/: test_data_masker.py  test_dns_analyzer.py
